syntax = "proto2";

message CatalogItemV1 {
  required string id = 1;
  required string producerId = 2;
  required string name = 3;
  required string description = 4;
  required CatalogItemTechnologyV1 technology = 5;
  optional CatalogAttributesV1 attributes = 6;
  repeated CatalogDescriptorV1 descriptors = 7;
  optional int64 createdAt = 8;
}

message CatalogAttributeValueV1 {
  required string id = 1;
  required bool explicitAttributeVerification = 2;
}

message CatalogAttributeV1 {
  optional CatalogAttributeValueV1 single = 1;
  repeated CatalogAttributeValueV1 group = 2;
}

message CatalogAttributesV1 {
  repeated CatalogAttributeV1 certified = 1;
  repeated CatalogAttributeV1 declared = 2;
  repeated CatalogAttributeV1 verified = 3;
}

message CatalogDescriptorV1 {
  required string id = 1;
  required string version = 2;
  optional string description = 3;
  repeated CatalogDocumentV1 docs = 4;
  required CatalogDescriptorStateV1 state = 5;
  optional CatalogDocumentV1 interface = 6;
  repeated string audience = 7;
  required int32 voucherLifespan = 8;
  required int32 dailyCallsPerConsumer = 9;
  required int32 dailyCallsTotal = 10;
  optional AgreementApprovalPolicyV1 agreementApprovalPolicy = 11;
  optional int64 createdAt = 12;
  optional int64 publishedAt = 13;
  repeated string serverUrls = 14;
  optional int64 suspendedAt = 15;
  optional int64 deprecatedAt = 16;
  optional int64 archivedAt = 17;
  optional CatalogAttributesV1 attributes = 18;
}

message CatalogDocumentV1 {
  required string id = 1;
  required string name = 2;
  required string contentType = 3;
  required string path = 4;
  required string checksum = 5;
  required string uploadDate = 6;
  required string prettyName = 7;
}

enum CatalogDescriptorStateV1 {
  DRAFT = 1;
  PUBLISHED = 2;
  DEPRECATED = 3;
  SUSPENDED = 4;
  ARCHIVED = 5;
}

enum CatalogItemTechnologyV1 {
  REST = 1;
  SOAP = 2;
}

enum AgreementApprovalPolicyV1 {
  AUTOMATIC = 1;
  MANUAL = 2;
}
